<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RaspberryPI Comm Tool</string>
    <string name="action_settings">Settings</string>
    <string name="ip_desc">IP address of a Raspberry PI</string>
    <string name="ip_default">192.168.1.60</string>
    <string name="connect_btn">Connect</string>
    <string name="press_me_btn">Press Me</string>
    <string name="ip_lbl">IP</string>
    <string name="app_desc">Raspberry PI GPIO controller</string>
    <string name="send_btn">Send</string>
    <string name="port_default">3142</string>
    <string name="port_desc">Port</string>

</resources>
