<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectActivity" >

    <EditText
        android:id="@+id/text_to_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/send"
        android:ems="10"
        android:enabled="true"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="4"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal|vertical"
        android:textAlignment="textStart" >

    </EditText>

    <EditText
        android:id="@+id/log_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_to_send"
        android:clickable="false"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:freezesText="true"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:longClickable="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal|vertical"
        android:selectAllOnFocus="false" >

        <requestFocus />

    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_to_send"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/desc_margin"
            android:text="@string/ip_lbl"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ip_address"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:contentDescription="@string/ip_desc"
            android:ems="20"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:text="@string/ip_default" >
        </EditText>

        <TextView
            android:id="@+id/port_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/desc_margin"
            android:text="@string/port_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/port"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:contentDescription="@string/ip_desc"
            android:ems="20"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:text="@string/port_default" />
    </LinearLayout>

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_to_send"
        android:layout_below="@+id/linearLayout1"
        android:onClick="connectToRaspberry"
        android:text="@string/connect_btn" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/connect"
        android:layout_alignBottom="@+id/connect"
        android:layout_alignRight="@+id/text_to_send"
        android:enabled="false"
        android:minHeight="48dip"
        android:paddingLeft="@dimen/big_button"
        android:paddingRight="@dimen/big_button"
        android:text="@string/send_btn" />

</RelativeLayout>